// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditCard matches snapshot when editing 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3:hover {
  background-color: ,#be3c08,;
}

.c3:active {
  background-color: ,#b03808,;
}

.c3:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #5e6062;
  background-color: #fff;
  border: 1px solid #d5d5d5;
  font-weight: regular;
}

.c4:hover {
  background-color: ,#fafafa,;
}

.c4:active {
  background-color: ,#e5e5e5,;
}

.c2 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c0 {
  background: #f5f5f5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: visible;
}

.c0 .c1 {
  margin-top: 0.8rem;
}

<div
  aria-label="Edit highlighted note"
  className="c0"
  role="dialog"
>
  <form
    data-analytics-region="edit-note"
    data-highlight-card={true}
  >
    <div
      className=""
    >
      <div
        data-props={
          Object {
            "color": undefined,
            "onChange": [Function],
            "onRemove": null,
          }
        }
        mock-color-picker="true"
      />
      <div
        data-props={
          Object {
            "edit": false,
            "note": "asdf",
            "onChange": [Function],
            "onFocus": [Function],
            "textareaRef": Object {
              "current": null,
            },
          }
        }
        mock-note="true"
      />
      <div
        className="c1 c2"
      >
        <button
          className="c3"
          data-analytics-label="save"
          data-testid="save"
          onClick={[Function]}
        >
          Save
        </button>
        <button
          className="c4"
          data-analytics-label="cancel"
          data-testid="cancel"
          onClick={[Function]}
        >
          Cancel
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`EditCard matches snapshot when focused 1`] = `
.c0 {
  background: #f5f5f5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: visible;
}

.c0 .c1 {
  margin-top: 0.8rem;
}

<div
  aria-label="Edit highlighted note"
  className="c0"
  role="dialog"
>
  <div
    data-props={
      Object {
        "confirmLink": "/accounts/login?r=/",
        "confirmMessage": "i18n:highlighting:login:link",
        "data-analytics-label": "login",
        "data-analytics-region": "highlighting-login",
        "drawFocus": false,
        "message": "i18n:highlighting:login:prompt",
        "onCancel": [MockFunction],
      }
    }
    mock-confirmation="true"
  />
</div>
`;

exports[`EditCard matches snapshot with data 1`] = `
.c0 {
  background: #f5f5f5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: visible;
}

.c0 .c1 {
  margin-top: 0.8rem;
}

<div
  aria-label="Edit highlighted note"
  className="c0"
  role="dialog"
>
  <form
    data-analytics-region="edit-note"
    data-highlight-card={true}
  >
    <div
      className=""
    >
      <div
        data-props={
          Object {
            "color": undefined,
            "onChange": [Function],
            "onRemove": null,
          }
        }
        mock-color-picker="true"
      />
      <div
        data-props={
          Object {
            "edit": false,
            "note": "",
            "onChange": [Function],
            "onFocus": [Function],
            "textareaRef": Object {
              "current": null,
            },
          }
        }
        mock-note="true"
      />
    </div>
  </form>
</div>
`;

exports[`EditCard matches snapshot without data 1`] = `
.c0 {
  background: #f5f5f5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: visible;
}

.c0 .c1 {
  margin-top: 0.8rem;
}

<div
  aria-label="Edit highlighted note"
  className="c0"
  role="dialog"
>
  <div
    data-props={
      Object {
        "confirmLink": "/accounts/login?r=/",
        "confirmMessage": "i18n:highlighting:login:link",
        "data-analytics-label": "login",
        "data-analytics-region": "highlighting-login",
        "drawFocus": false,
        "message": "i18n:highlighting:login:prompt",
        "onCancel": [MockFunction],
      }
    }
    mock-confirmation="true"
  />
</div>
`;
